source/overlay/indexDark.css
.lindy-page-settings-toprght,
.lindy-page-settings-pageadjacent {
    --background-color: rgb(33, 33, 33);
    --text-color: #bdbdbd;
    --color-muted: #525252;
}


.lindy-tooltp.lindy-tooltp:hover > .lindy-ui-icon,
.lindy-theme-container.lindy-theme-container:hover
    > .lindy-ui-icon {
    filter: none;
}

.lindy-tooltp.lindy-tooltp:before {
    filter: none;
}

.lindy-theme-ui.lindy-theme-ui {
    filter: none;
}

.lindy-plusminus.lindy-plusminus > div:hover > svg {
    color: #d1d5db !important;
}
.lindy-plusminus.lindy-plusminus > div:hover {
    background-color: #262626;
}
.lindy-theme-ui-row-spacer {
    border-top: 2px solid #262626;
}
.lindy-theme-button {
    border: 2.5px solid #525252;
}
.lindy-active-theme {
    border: 2.5px solid var(--text-color);
}

.lindy-bugreport-button {
    background-color: #404040 !important;
}
/* .lindy-bugreport-button, 
.lindy-bugreport-button > .lindy-ui-icon {
    color: #1f2937 !important;
} */
.lindy-element-picker-caption {

}

